Add SLF4J as default logging framework